# MOT-w-YOLOv5-cpp

./: .gitignore  CMakeLists.txt  main.cpp
